feat: add sound, create game and game over, delete context

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white;
+  width: 100%;
+  position: relative;
 }
 
 code {
